# Lab6

./: CMakeLists.txt  Dockerfile  Jenkinsfile
sr/: main.cpp
src/: BankAccount.cpp  BankAccount.h  main.cpp
test/: test_main.cpp
